# DimensionalBase

./: .gitignore  .pre-commit-config.yaml  AGENT_COMMS_BENCHMARK_REPORT.md  BENCHMARK_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DimensionalBase-Explainer.md  Dockerfile  LICENSE  MANIFEST.in  MULTI_AGENT_BENCHMARK_REPORT.md  README.md  SECURITY.md  docker-compose.yml  mcp.json  pyproject.toml  readme.md  setup.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: agent_comms_bench.py  baselines.py  definitive.py  multi_agent_bench.py  real_world.py  real_world_v2.py  run_all.py
benchmarks/standard/: __init__.py  base_evaluator.py  comparison_table.py  data_loader.py  head_to_head.py  hotpotqa.py  longbench_v2.py  metrics.py  results_head_to_head.json  results_longbench_v2.json  results_multimodel.json  run_standard.py
benchmarks/tasks/: context_quality.py  contradiction.py  coordination.py  scale.py  telephone.py  token_waste.py
conformance/: __init__.py
conformance/core/: __init__.py  test_entry_serialization.py  test_glob_matching.py  test_put_get_semantics.py
conformance/embedding/: __init__.py  test_normalization.py
conformance/reasoning/: __init__.py  test_confidence_updates.py  test_trust_updates.py
conformance/scoring/: __init__.py  test_budget_packing.py
dimensionalbase/: __init__.py  config.py  db.py  exceptions.py  runtime.py
dimensionalbase/algebra/: __init__.py  fingerprint.py  operations.py  space.py
dimensionalbase/backends/: __init__.py
dimensionalbase/channels/: __init__.py  base.py  embedding.py  manager.py  tensor.py  text.py
dimensionalbase/cli/: __init__.py  demo.py  formatters.py  main.py
dimensionalbase/context/: __init__.py  compression.py  engine.py  reranker.py
dimensionalbase/core/: __init__.py  entry.py  matching.py  types.py
dimensionalbase/embeddings/: __init__.py  circuit_breaker.py  provider.py
dimensionalbase/events/: __init__.py  bus.py
dimensionalbase/integrations/: __init__.py
dimensionalbase/mcp/: __init__.py  __main__.py  server.py
dimensionalbase/reasoning/: __init__.py  active.py  confidence.py  provenance.py
dimensionalbase/security/: __init__.py  acl.py  auth.py  encryption.py  middleware.py  validation.py
dimensionalbase/server/: __init__.py  __main__.py  app.py  logging_config.py  middleware.py  models.py  seed.py  ws.py
dimensionalbase/storage/: __init__.py  migrations.py  vectors.py
dimensionalbase/trust/: __init__.py  agent_trust.py
docs/: 00_START_HERE.md  01_PROJECT_VISION.md  02_ARCHITECTURE.md  03_API_REFERENCE.md  04_BENCHMARKS_AND_COMPARISONS.md  05_CODEBASE_MAP.md  06_AGENT_WORKING_GUIDE.md
examples/: basic_usage.py  conflict_detection.py  multi_agent_demo.py
spec/: dbps-v1.0.md
spec/grammar/: glob-matching.abnf  path-syntax.abnf
spec/schemas/: event.json  handshake.json  knowledge-entry.json
tests/: conftest.py  test_adaptive_scoring.py  test_algebra.py  test_circuit_breaker.py  test_concurrency.py  test_config.py  test_core.py  test_e2e.py  test_embeddings.py  test_errors.py  test_intelligence.py  test_mcp.py  test_persistence.py  test_runtime.py  test_security.py  test_server_api.py
(+14 files in other folders)
