[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimensionalbase"
dynamic = ["version"]
description = "The protocol and database for AI communication. Storage and coordination built for how AI actually thinks — in dimensions, not text."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DimensionalBase Team"}
]
keywords = ["ai", "agents", "database", "embeddings", "multi-agent", "protocol", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
]

[tool.setuptools.dynamic]
version = {attr = "dimensionalbase.__version__"}

[project.optional-dependencies]
embeddings-local = ["sentence-transformers>=2.2.0"]
embeddings-openai = ["openai>=1.0.0"]
embeddings-all = ["sentence-transformers>=2.2.0", "openai>=1.0.0"]
mcp = ["mcp>=1.0.0"]
server = ["fastapi>=0.104.0", "uvicorn[standard]>=0.24.0", "websockets>=12.0"]
cli = ["click>=8.0.0", "rich>=13.0.0"]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.41.0", "crewai-tools>=0.8.0"]
security = ["cryptography>=41.0"]
distributed = ["psycopg2-binary>=2.9", "redis>=5.0"]
bench = ["openai>=1.0.0", "anthropic>=0.37.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
all = [
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "langchain-core>=0.2.0",
    "cryptography>=41.0",
    "pytest>=7.0",
]

[project.scripts]
dimensionalbase = "dimensionalbase.cli.main:cli"
db = "dimensionalbase.cli.main:cli"
dimensionalbase-mcp = "dimensionalbase.mcp.__main__:main"
dimensionalbase-server = "dimensionalbase.server.__main__:main"

[project.urls]
Homepage = "https://dimensionalbase.com"
Repository = "https://github.com/txtgrey/DimensionalBase"
Documentation = "https://docs.dimensionalbase.com"

[tool.setuptools.packages.find]
include = ["dimensionalbase*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["dimensionalbase"]

[tool.coverage.report]
fail_under = 85
show_missing = true
